@@ -1,5 +1,8 @@
 This file documents the revision history for the SNClient+ agent.
 
+next:
+         - windows: add firewall on program, not ports
+
 0.09       Sat Oct  7 13:44:18 CEST 2023
          - use shared path as working directory when running external scripts
          - check_network: add name/exclude and speed
